# obr-macroeconomic-model

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  notify-macromod.yml
chat/: README.md  agent.py  server.py
chat/static/: index.html
dashboard/: README.md  gen_explorer_data.py  gen_model_data.py  gen_reform_grid.py  index.html  inject_data.py  package-lock.json  package.json
dashboard/app/: layout.jsx  page.jsx
docs/: ROADMAP.md  calibration_scorecard.md  forecasting_framework.md  stage1b_chain_trace.md  stage1c_data_scope.md  transmission_audit.md
obr_macro/: __init__.py  baseline.py  calibration.py  calibration_score.py  data.py  diagnose_chain.py  forecast.py  forecast_tune.py  full_solver.py  model.py  ons_fetch.py  ons_pull.py  reform_analysis.py  scoring.py  solver.py  stage1c_scope.py  stage1c_seed.py  transmission_audit.py  transpiler.py  variables.py
obr_macro/_data/: obr_efo_march_2026_aggregates.xlsx  obr_efo_march_2026_economy.xlsx  obr_efo_march_2026_expenditure.xlsx  obr_efo_march_2026_receipts.xlsx  obr_efo_november_2025_aggregates.xlsx  obr_efo_november_2025_economy.xlsx  obr_efo_november_2025_expenditure.xlsx  obr_efo_november_2025_receipts.xlsx
obr_macro/equations/: __init__.py  balance_of_payments.py  consumption.py  exports.py  financial_sector.py  gdp.py  household_balance.py  imports.py  income_account.py  inventories.py  investment.py  labour_market.py  north_sea_oil.py  prices_wages.py  public_expenditure.py  public_receipts.py  public_sector_totals.py
obr_macro/seeds/: model_glossary.json  (+2 more)
tests/: conftest.py  test_apply_shock.py  test_bridge_contract.py  test_calibration_report.py  test_dashboard_data.py  test_model.py  test_model_invariants.py  test_packaging.py  test_scoring.py  test_solver.py  test_stress.py  test_transpiler.py
(+10 files in other folders)
