[project]
name = "obr-macro-model"
version = "0.1.0"
description = "Python implementation of the OBR macroeconomic model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rich>=14.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
