[project]
name = "obr-macro-model"
version = "0.1.0"
description = "Python emulator of the OBR macroeconomic model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "scipy>=1.15.3",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["obr_macro*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
